--- a/Graduation_Project/Graduation_Project.vcxproj
+++ b/Graduation_Project/Graduation_Project.vcxproj
@@ -81,6 +81,21 @@
   <ItemGroup>
     <CudaCompile Include="kernel.cu" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\camera.h" />
+    <ClInclude Include="include\color.h" />
+    <ClInclude Include="include\hittable.h" />
+    <ClInclude Include="include\hittable_list.h" />
+    <ClInclude Include="include\interval.h" />
+    <ClInclude Include="include\material.h" />
+    <ClInclude Include="include\ray.h" />
+    <ClInclude Include="include\rtweekend.h" />
+    <ClInclude Include="include\sphere.h" />
+    <ClInclude Include="include\vec3.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 12.2.targets" />
