box 추가, obj 별 material 설정 가능

--- a/Graduation_Project/Graduation_Project.vcxproj.filters
+++ b/Graduation_Project/Graduation_Project.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClInclude Include="include\aabb.h" />
     <ClInclude Include="include\bvh.h" />
     <ClInclude Include="include\obj.h" />
+    <ClInclude Include="include\quad.h" />
+    <ClInclude Include="box.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
