타이머 추가

--- a/Graduation_Project/Graduation_Project.vcxproj
+++ b/Graduation_Project/Graduation_Project.vcxproj
@@ -49,7 +49,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(LocalDebuggerWorkingDirectory)/include;$(IncludePath)</IncludePath>
     <LibraryPath>$(LocalDebuggerWorkingDirectory)/lib;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\output.ppm</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
